@@ -1366,7 +1366,10 @@ int main(int argc, char **argv)
 		}
 		orig_path_type = APOL_POLICY_PATH_TYPE_MODULAR;
 	}
-	orig_pol_path = apol_policy_path_create(orig_path_type, orig_base_path, orig_module_paths);
+	if (apol_file_is_policy_path_list(orig_base_path) > 0)
+		orig_pol_path = apol_policy_path_create_from_file(orig_base_path);
+	else
+		orig_pol_path = apol_policy_path_create(orig_path_type, orig_base_path, orig_module_paths);
 	if (!orig_pol_path) {
 		ERR(NULL, "%s", strerror(errno));
 		goto err;
@@ -1391,7 +1394,10 @@ int main(int argc, char **argv)
 		}
 		mod_path_type = APOL_POLICY_PATH_TYPE_MODULAR;
 	}
-	mod_pol_path = apol_policy_path_create(mod_path_type, mod_base_path, mod_module_paths);
+	if (apol_file_is_policy_path_list(mod_base_path) > 0)
+		mod_pol_path = apol_policy_path_create_from_file(mod_base_path);
+	else
+		mod_pol_path = apol_policy_path_create(mod_path_type, mod_base_path, mod_module_paths);
 	if (!mod_pol_path) {
 		ERR(NULL, "%s", strerror(errno));
 		goto err;
